--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vinseh-base-shop-landing",
+  "name": "vinesh-base-shop-landing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,37 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@date-io/dayjs": "^3.2.0",
+    "@date-io/jalaali": "^3.2.0",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
+    "@mui/stylis-plugin-rtl": "^7.3.5",
+    "@mui/x-date-pickers": "^8.17.0",
+    "@mui/x-date-pickers-pro": "^8.17.0",
+    "@reduxjs/toolkit": "^2.10.1",
+    "date-fns-jalali": "^4.0.0-0",
+    "dayjs": "^1.11.19",
+    "dayjs-jalali": "^0.0.2",
+    "jalali-moment": "^3.3.11",
+    "ldrs": "^1.1.9",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "next": "16.0.1",
+    "nookies": "^2.5.2",
+    "qs": "^6.14.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "react-hook-form": "^7.66.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.19",
+    "stylis": "^4.3.6",
+    "stylis-plugin-rtl": "^2.1.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "eslint": "^9",
