--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "styled-components": "^6.1.19",
     "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1",
+    "swiper": "^12.0.3",
     "yup": "^1.7.1"
   },
   "devDependencies": {
