--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.10.1",
     "date-fns-jalali": "^4.0.0-0",
     "dayjs": "^1.11.19",
+    "iran-cities-json": "^2.0.0",
     "dayjs-jalali": "^0.0.2",
     "jalali-moment": "^3.3.11",
     "ldrs": "^1.1.9",
