--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@date-io/dayjs": "^3.2.0",
@@ -30,6 +31,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "16.0.1",
+    "next-sitemap": "^4.2.3",
     "nookies": "^2.5.2",
     "qs": "^6.14.0",
     "react": "19.2.0",
@@ -41,6 +43,7 @@
     "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^12.0.3",
+    "xmlbuilder2": "^4.0.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
